--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@ today.toLocaleString('zh-TW', { timeZone: 'Asia/Taipei' })
 var hh = today.getHours();
 var mm = today.getMinutes(); 
 
-        if(hh <= 13){
+        if(hh <= 15){
           document.getElementById("cin").classList.remove('invisible');
-        }else if(hh >= 17){
+        }else if(hh > 15){
           document.getElementById("cout").classList.remove('invisible');
             }else{
-alert("ไม่สามารถเช็คอิน/เอาท์ได้ในช่วงเวลา 13.00-17.00 "+hh+":"+mm);
+alert("15:00 "+hh+":"+mm);
 liff.closeWindow();  
             }
 }
